--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,8 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>            
         </dependency>
-	</dependencies>	
+	</dependencies>
+	<reports>
+		<report>maven-emma-plugin</report>
+	</reports>	
 </project>
