--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<properties>
-		<org.slf4j.version>1.6.4</org.slf4j.version>
+		<org.slf4j.version>2.0.7</org.slf4j.version>
 	</properties>
 	
 	<dependencies>
@@ -32,10 +32,10 @@
 			<version>${org.slf4j.version}</version>
 		</dependency>
 		<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>            
-        </dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.20.0</version>
+</dependency>
 	</dependencies>
 	<reports>
 		<report>maven-emma-plugin</report>
